--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     api 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:4.3.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
