--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.firebaseui:firebase-ui-database:4.3.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'id.zelory:compressor:2.1.0'
 }
